누락된 패키지 수정

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ openpyxl = "*"
 python-multipart = "*"
 passlib = {extras = ["bcrypt"], version = "*"}
 python-jose = "*"
+pydantic-settings = "*"
+motor = "*"
 
 [dev-packages]
 
