API 정상동작하지 않는 문제 해결

--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ pydantic-settings = "*"
 motor = "*"
 
 [dev-packages]
+pre-commit = "*"
 
 [requires]
-python_version = "3.12"
+python_version = ">= 3.12"
