--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Custom
+git_ssh_key
+git_ssh_key.pub
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,react,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,react,visualstudiocode
 
